# guided-growth-mvp

./: .dockerignore  .env.local.example  .env.vercel.check  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .mcp.json  .prettierignore  .vercelignore  .worker-out.err  ACCEPTANCE-DEEPENING.md  ACCEPTANCE-FOLD-REPORT.md  AGENTS.md  ANALYTICS-BUILDER-REPORT.md  ANNOTATED-VIEW-REPORT.md  AUDIO-BUILDER-REPORT.md  BEAT-AUDIT-TABLE.md  BEAT0-REPORT.md  BREAKAGE-REPORT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COLLAB.md  CONTEXTS-BUILDER-REPORT.md  DEMO_SCRIPT.md  Dockerfile  ENFORCEMENT-AUDIT.md  ENFORCEMENT-IMPLEMENTATION-PLAN.md  EXPORTER-BUILDER-REPORT.md  FEATURES.md  GATES-BUILDER-REPORT.md  GLOBAL-FOLD-REPORT.md  GLOBAL-FOLD-V2-REPORT.md  GLOBAL-LAYER-COMPARISON.md  GLOBAL-RULES-FULL.check.mjs  GLOBAL-RULES-FULL.md  GOOGLE_OAUTH_SETUP.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  (+77 more)
.claude/: launch.json  settings.json
.codex/: config.toml
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
.storybook/: main.ts  preview-head.html  preview.tsx
ai-qa/: README.md
alembic/: README.md  env.py  script.py.mako
android/: capacitor.settings.gradle
api/: [...path].ts  affirmation.ts  anonymized-export.ts  cartesia-agent-token.ts  cartesia-stt.ts  cartesia-token.ts  cartesia-tts-sse.ts  cartesia-tts.ts  deepgram-token.js  deepgram-token.ts  elevenlabs-stt.ts  elevenlabs-token.ts  health.ts  (+9 more)
(+2677 files in other folders)
